// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textUnderlineOffset renders 0 1`] = `
Array [
  .c0 {
  text-underline-offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders function 1`] = `
Array [
  .c0 {
  text-underline-offset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders invalid theme path 1`] = `
Array [
  .c0 {
  text-underline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders negative number 1`] = `
Array [
  .c0 {
  text-underline-offset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-underline-offset: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-underline-offset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-underline-offset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-offset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-offset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-underline-offset: July;
}

@media May {
  .c0 {
    text-underline-offset: August;
  }
}

@media April {
  .c0 {
    text-underline-offset: September;
  }
}

@media January {
  .c0 {
    text-underline-offset: November;
  }
}

@media April {
  .c0 {
    text-underline-offset: August;
  }
}

@media June {
  .c0 {
    text-underline-offset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: July;
}

@media May {
  .c0 {
    text-underline-offset: August;
  }
}

@media April {
  .c0 {
    text-underline-offset: September;
  }
}

@media January {
  .c0 {
    text-underline-offset: November;
  }
}

@media April {
  .c0 {
    text-underline-offset: August;
  }
}

@media June {
  .c0 {
    text-underline-offset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-offset: November;
  }
}

@media April {
  .c0 {
    text-underline-offset: January;
  }
}

@media January {
  .c0 {
    text-underline-offset: December;
  }
}

@media April {
  .c0 {
    text-underline-offset: April;
  }
}

@media June {
  .c0 {
    text-underline-offset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-offset: November;
  }
}

@media April {
  .c0 {
    text-underline-offset: January;
  }
}

@media January {
  .c0 {
    text-underline-offset: December;
  }
}

@media April {
  .c0 {
    text-underline-offset: April;
  }
}

@media June {
  .c0 {
    text-underline-offset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-underline-offset: July;
  }
}

@media April {
  .c0 {
    text-underline-offset: August;
  }
}

@media January {
  .c0 {
    text-underline-offset: September;
  }
}

@media April {
  .c0 {
    text-underline-offset: November;
  }
}

@media June {
  .c0 {
    text-underline-offset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-underline-offset: July;
  }
}

@media April {
  .c0 {
    text-underline-offset: August;
  }
}

@media January {
  .c0 {
    text-underline-offset: September;
  }
}

@media April {
  .c0 {
    text-underline-offset: November;
  }
}

@media June {
  .c0 {
    text-underline-offset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-offset: January;
  }
}

@media April {
  .c0 {
    text-underline-offset: December;
  }
}

@media January {
  .c0 {
    text-underline-offset: April;
  }
}

@media April {
  .c0 {
    text-underline-offset: May;
  }
}

@media June {
  .c0 {
    text-underline-offset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-offset: January;
  }
}

@media April {
  .c0 {
    text-underline-offset: December;
  }
}

@media January {
  .c0 {
    text-underline-offset: April;
  }
}

@media April {
  .c0 {
    text-underline-offset: May;
  }
}

@media June {
  .c0 {
    text-underline-offset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders postitive number 1`] = `
Array [
  .c0 {
  text-underline-offset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders string 1`] = `
Array [
  .c0 {
  text-underline-offset: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineOffset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textUnderlineOffset renders valid theme path 1`] = `
Array [
  .c0 {
  text-underline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-offset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
